Fixed overflowing in the new butter bar in Files.app.
While copying files with long filenames, contents of the butter bar were overflowing. This patch addresses this issue and also makes the dialog growable in case of long error messages.

TEST=Copy, perform files on Files.app to invoke butter bar.
BUG=168973


Review URL: https://chromiumcodereview.appspot.com/11827015

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@176359 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ac325b5f5f165d056596624e8a3f07fe9ff94f5a

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -81,8 +81,7 @@ body.loaded {
   -webkit-box-orient: block-axis;
   -webkit-box-pack: center;
   display: -webkit-box;
-  height: 35px;
-  overflow: hidden;
+  min-height: 35px;
 }
 
 #butter-bar .actions {
@@ -122,10 +121,10 @@ body.loaded {
   background-color: rgba(221, 75, 57, 0.2);
 }
 
-#butter-bar .content-message {
-  -webkit-box-align: begin;
-  -webkit-box-flex: 1.0;
-  -webkit-box-orient: vertical;
+#butter-bar .butter-message.single-line {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .progress-bar {
